--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -3,7 +3,7 @@
   height: 450px;
   border: 1px solid #d8d8fd;
   border-radius: 4px;
-  box-shadow: 0 0 9px 1px rgba(0, 0, 0, .1);
+  box-shadow: 0 0 9px 1px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
 }
